# ConversationalAI-Embedded-Kit-2.0

./: README.md
examples/high_quality_solution/espressif/components/esp_board_manager/test_apps/main/: CMakeLists.txt  idf_component.yml  main.c  test_board_mgr.h  test_board_mgr_audio_embed.c  test_board_mgr_audio_sdcard.c  test_dev_audio_codec.c  test_dev_audio_codec.h  test_dev_camera.h  test_dev_custom.c  test_dev_fatfs_sdcard.h  test_dev_fs_spiffs.c  test_dev_lcd_init.c  test_dev_lcd_lvgl.h  test_dev_ledc.h  test_dev_pwr_ctrl.c  test_periph_gpio.c  test_periphs.h  wav_header.c
examples/high_quality_solution/espressif/components/gen_bmgr_codes/: CMakeLists.txt  gen_board_device_config.c  gen_board_device_handles.c  gen_board_info.c  gen_board_periph_config.c  gen_board_periph_handles.c  idf_component.yml
examples/high_quality_solution/espressif/main/: CMakeLists.txt  Kconfig.projbuild  conv_ai_embedded_kit.c  idf_component.yml  pipeline.c  pipeline.h
examples/high_quality_solution/espressif/main/echoear_app/: aios_Ai_Conversation_app.c  aios_Ai_Conversation_app.h  aios_app_manager.c  aios_app_manager.h  audio_capture.c  audio_capture.h  audio_player.c  audio_player.h  audio_vol.c  audio_vol.h  button_event.c  button_event.h  common_def.h  conv_ai.c  conv_ai.h  iot_display.c  iot_display.h  iot_local_function_list.c  iot_local_function_list.h  iot_wakeup.c  iot_wakeup.h
examples/low_load_solution/espressif/components/esp-gmf/elements/gmf_video/: CHANGELOG.md  CMakeLists.txt  esp_gmf_video_crop.c  esp_gmf_video_enc.c  esp_gmf_video_fps_cvt.c  esp_gmf_video_overlay.c  esp_gmf_video_ppa.c  esp_gmf_video_rotate.c  esp_gmf_video_scale.c  gmf_video_common.c  idf_component.yml
examples/low_load_solution/espressif/components/esp_board_manager/: CHANGELOG.md  CMakeLists.txt  idf_component.yml
examples/low_load_solution/espressif/components/esp_board_manager/boards/dual_eyes_board_v1_0/: board_info.yaml  setup_device.c
examples/low_load_solution/espressif/components/esp_board_manager/boards/echoear_core_board_v1_2/: board_peripherals.yaml
examples/low_load_solution/espressif/components/esp_board_manager/boards/esp32_c5_spot/: board_devices.yaml  board_peripherals.yaml
examples/low_load_solution/espressif/components/esp_board_manager/boards/esp32_p4_function_ev/: Kconfig  board_devices.yaml  board_peripherals.yaml
examples/low_load_solution/espressif/components/esp_board_manager/boards/esp32_s3_korvo2l/: Kconfig  board_devices.yaml  board_peripherals.yaml  custom_device.c
examples/low_load_solution/espressif/components/esp_board_manager/boards/esp_box_3/: board_peripherals.yaml
examples/low_load_solution/espressif/components/esp_board_manager/boards/lyrat_mini_v1_1/: Kconfig  board_info.yaml
examples/low_load_solution/espressif/components/esp_board_manager/boards/m5stack_cores3/: board_peripherals.yaml  power_manager.c
examples/low_load_solution/espressif/components/esp_board_manager/devices/: CMakeLists.txt
examples/low_load_solution/espressif/components/esp_board_manager/devices/dev_audio_codec/: dev_audio_codec.yaml
examples/low_load_solution/espressif/components/esp_board_manager/devices/dev_camera/: dev_camera.c  dev_camera.h  dev_camera.py
examples/low_load_solution/espressif/components/esp_board_manager/devices/dev_custom/: dev_custom.c  dev_custom.yaml
examples/low_load_solution/espressif/components/esp_board_manager/devices/dev_display_lcd_spi/: dev_display_lcd_spi.h  dev_display_lcd_spi.py
examples/low_load_solution/espressif/components/esp_board_manager/devices/dev_fatfs_sdcard/: dev_fatfs_sdcard.h  dev_fatfs_sdcard.py
examples/low_load_solution/espressif/components/esp_board_manager/devices/dev_fatfs_sdcard_spi/: dev_fatfs_sdcard_spi.py  dev_fatfs_sdcard_spi.yaml
examples/low_load_solution/espressif/components/esp_board_manager/devices/dev_fs_spiffs/: dev_fs_spiffs.c  dev_fs_spiffs.h  dev_fs_spiffs.yaml
examples/low_load_solution/espressif/components/esp_board_manager/devices/dev_gpio_expander/: dev_gpio_expander.c  dev_gpio_expander.yaml
examples/low_load_solution/espressif/components/esp_board_manager/devices/dev_lcd_touch_i2c/: dev_lcd_touch_i2c.h  dev_lcd_touch_i2c.yaml
examples/low_load_solution/espressif/components/esp_board_manager/docs/: device_and_peripheral_rules.md
examples/low_load_solution/espressif/components/esp_board_manager/gen_codes/: Kconfig.in
examples/low_load_solution/espressif/components/esp_board_manager/generators/: __init__.py  config_generator.py  sdkconfig_manager.py  settings.py  source_scanner.py  version_manager.py
examples/low_load_solution/espressif/components/esp_board_manager/include/: esp_board_manager_defs.h  esp_board_manager_err.h  esp_board_periph.h
examples/low_load_solution/espressif/components/esp_board_manager/peripherals/: periph_gpio.yml  periph_i2c.c  periph_i2c.h  periph_i2c.py  periph_i2s.h  periph_i2s.py  periph_ledc.c  periph_ledc.py  periph_spi.c  periph_spi.py  periph_spi.yml
examples/low_load_solution/espressif/components/esp_board_manager/src/: esp_board_manager.c  esp_board_periph.c
examples/low_load_solution/espressif/components/esp_board_manager/test_apps/: partitions_test_app.csv  pytest_esp_board_manager.py  sdkconfig.defaults.esp32
examples/low_load_solution/espressif/components/gen_bmgr_codes/: CMakeLists.txt  gen_board_periph_handles.c
framework/inc/: aios.h  (+4 more)
volc_conv_ai/: CMakeLists.txt  README.md
volc_conv_ai/cmake/: common.cmake  espressif.cmake  linux.cmake  macos.cmake
volc_conv_ai/inc/: volc_conv_ai.h
volc_conv_ai/osal/inc/: volc_osal.h
volc_conv_ai/osal/src/espressif/: volc_osal.c
volc_conv_ai/osal/src/linux/: volc_osal.c
volc_conv_ai/osal/src/macos/: volc_osal.c
volc_conv_ai/sample/: sample.c
volc_conv_ai/src/: volc_conv_ai.c
volc_conv_ai/src/base/: volc_base.h  volc_device_manager.c  volc_device_manager.h
volc_conv_ai/src/transports/high_quality/inc/: volc_rtc.h
volc_conv_ai/src/transports/high_quality/src/: volc_rtc.c
volc_conv_ai/src/transports/low_load/src/: volc_ws.c
volc_conv_ai/src/util/: volc_auth.c  volc_json.c
(+366 files in other folders)
